# hetzner_ddns

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
src/: hetzner_dns.rs  main.rs
src/hetzner_ddns/: __init__.py  hetzner_api.py  kritzl_dev.py  main.py
