[project]
name = "hetzner_ddns"
authors = [{name = "ftsell", email = "dev@ftsell.de"}]
dynamic = ["version", "description"]
license = { file = "LICENSE" }

dependencies = [
    "requests~=2.32",
    "pydantic~=2.7",
]

[project.urls]
Home = "https://github.com/ftsell/hetzner_ddns"

[project.scripts]
hetzner-ddns = "hetzner_ddns.main:main"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
